# AdScreen

./: .gitignore  .replit  LICENSE  LICENSE.md  LICENSE_en  README.md  README_en.md  ROBUSTNESS_REPORT.md  SCHEDULING_ENFORCEMENT.md  app.py  config.py  create_superadmin.py  design_guidelines.md  fix_async_start.js  fix_state.js  fix_state_prop.js  init_db.py  init_db_demo.py  main.py  migrate_ad_screens.py  models.py  package-lock.json  package.json  patch.diff  patch.js  patch_memory.js  patch_state.js  pyproject.toml  replit.md  requirements.txt  tailwind.config.js  test_24h_stability.py  test_e2e_robustness.py  test_fetch.js  test_scheduling_logic.py  test_scheduling_standalone.py  test_state.js
.Jules/: palette.md
.claude/: CLAUDE.md
attached_assets/: Check_my_repo_from_the_github_connected_[https___g_1764980846723.md  I've_applied_all_the_recommended_fixes_from_the_an_1764981135645.md  IMG_2639_1764609801248.HEIC  Le_flux_stream_passe_mais_j'ai_cette_errreu,_ca_po_1764777391966.md  Lien_bien_le_code_compet_de_mon_repo_[https___gith_1764770974138.md  Meme_probleme,_le_titre_de_la_chaine_change_mais_p_1764778132671.md  On_a_fait_de_progré_la_ca_affiche_mtn_ca_1764775759334.md  Pasted--Shabaka-AdScreen-Ini-1765029726346_1765029726349.txt  Pasted-ALGORITHME-DE-RESERVATION-ET-PLAYLIST-ECRAN-PUBLICITAIRE-SELF-SERVICE--1764596669806_1764596669808.txt  Pasted-ALGORITHME-DE-RESERVATION-ET-PLAYLIST-LOGIQUE-PRINCIPALE--1764596689598_1764596689598.txt  Pasted-Algorithme-Algorithme-de-chiffrement-obsol-te-obsol-te-_1765903569722.txt  image.jpg_(1)_1764773115885.md  (+12 more)
(+176 files in other folders)
