[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Shabaka AdScreen - Digital signage platform"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.1.0",
    "flask>=3.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gevent>=23.0.0",
    "gunicorn>=21.2.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.9",
    "pyjwt>=2.8.0",
    "pymupdf>=1.23.0",
    "qrcode>=7.4.2",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "werkzeug>=3.0.0",
]
